--- a/macSVG.xcodeproj/xcshareddata/xcschemes/macSVG Debug.xcscheme
+++ b/macSVG.xcodeproj/xcshareddata/xcschemes/macSVG Debug.xcscheme
@@ -315,6 +315,13 @@
             ReferencedContainer = "container:macSVG.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CA_DEBUG_TRANSACTIONS"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
