Some build errors were found after the previous commit was pulled to a different Mac.  And another git problem will require deletion of the MacSVGPluginView.xib file, to be added back in the next commit.
MacSVGPluginSwiftInterface.swift was added to the MacSVGPlugin.framework to improve visibility to the Swift Intermediates generated files, particularly MacSVGPlugin-Swift.h, so it will be easier for Swift plugins to override the framework methods by inspecting the generated header.

The Debug and Release schemes were edited.  The build list for each scheme should have 18 plugins projects, one framework project and one app project.

--- a/macSVG.xcodeproj/xcshareddata/xcschemes/macSVG Debug.xcscheme
+++ b/macSVG.xcodeproj/xcshareddata/xcschemes/macSVG Debug.xcscheme
@@ -98,6 +98,20 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "0E12A5EE1E7E828D005BA053"
+               BuildableName = "ConvertPathsDialog.plugin"
+               BlueprintName = "ConvertPathsDialog"
+               ReferencedContainer = "container:MacSVG Plugin Projects/macSVG Plugins/ConvertPathsDialog/ConvertPathsDialog.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "0E31630617A871230030D657"
                BuildableName = "CoordinatesAttributeEditor.plugin"
                BlueprintName = "CoordinatesAttributeEditor"
@@ -116,20 +130,6 @@
                BuildableName = "ImageElementEditor.plugin"
                BlueprintName = "ImageElementEditor"
                ReferencedContainer = "container:MacSVG Plugin Projects/macSVG Plugins/ImageElementEditor/ImageElementEditor.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0EF29DA81D7B7BF300267844"
-               BuildableName = "IRIReferenceAttributeEditor.plugin"
-               BlueprintName = "IRIReferenceAttributeEditor"
-               ReferencedContainer = "container:MacSVG Plugin Projects/macSVG Plugins/IRIReferenceAttributeEditor/IRIReferenceAttributeEditor.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -186,6 +186,20 @@
                BuildableName = "PointsAttributeEditor.plugin"
                BlueprintName = "PointsAttributeEditor"
                ReferencedContainer = "container:MacSVG Plugin Projects/macSVG Plugins/PointsAttributeEditor/PointsAttributeEditor.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "0E2EB20D1E1AFE3B00F36593"
+               BuildableName = "StyleAttributeEditor.plugin"
+               BlueprintName = "StyleAttributeEditor"
+               ReferencedContainer = "container:MacSVG Plugin Projects/macSVG Plugins/StyleAttributeEditor/StyleAttributeEditor.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
