--- a/MacSVG Plugin Projects/macSVGPlugin Framework/macSVGPluginConfig.xcconfig
+++ b/MacSVG Plugin Projects/macSVGPlugin Framework/macSVGPluginConfig.xcconfig
@@ -5,6 +5,8 @@
 //  Created by Douglas Ward on 10/17/16.
 //
 //
+//  Disabled HEADER_SEARCH_PATHS and FRAMEWORKS_SEARCH_PATHS due to this error - Argument list too long: recursive header expansion failed at /Users/dsward/Documents/ArkPhone_LLC_Projects/macSVG_Project/../../../.cocoapods/repos/master/Specs/AGDefines.
+
 
 //:configuration = Debug
 CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES = YES
@@ -15,14 +17,14 @@ CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES = YES
 //:completeSettings = some
 
 //:configuration = Debug
-HEADER_SEARCH_PATHS = "$(SRCROOT)/../../../"/**  $(inherited) /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include
+//  HEADER_SEARCH_PATHS = "$(SRCROOT)/../../../"/**  $(inherited) /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include
 
-FRAMEWORKS_SEARCH_PATHS = ${TARGET_BUILD_DIR} "$(SRCROOT)/../../../"/**
+//  FRAMEWORKS_SEARCH_PATHS = ${TARGET_BUILD_DIR} "$(SRCROOT)/../../../"/**
 
 //:configuration = Release
-HEADER_SEARCH_PATHS = "$(SRCROOT)/../../../"/**  $(inherited) /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include
+//  HEADER_SEARCH_PATHS = "$(SRCROOT)/../../../"/**  $(inherited) /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include
 
-FRAMEWORKS_SEARCH_PATHS = ${TARGET_BUILD_DIR} "$(SRCROOT)/../../../"/**
+//  FRAMEWORKS_SEARCH_PATHS = ${TARGET_BUILD_DIR} "$(SRCROOT)/../../../"/**
 
 
 
