--- a/MacSVG Plugin Projects/macSVGPlugin Framework/macSVGPluginConfig.xcconfig
+++ b/MacSVG Plugin Projects/macSVGPlugin Framework/macSVGPluginConfig.xcconfig
@@ -17,11 +17,18 @@ CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES = YES
 //:completeSettings = some
 
 //:configuration = Debug
+HEADER_SEARCH_PATHS = "$(SRCROOT)/../../../"/**  $(inherited) "\"$(SRCROOT)/../../macSVGPlugin Framework/MacSVGPlugin/**\""
+
 //  HEADER_SEARCH_PATHS = "$(SRCROOT)/../../../"/**  $(inherited) /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include
 
 //  FRAMEWORKS_SEARCH_PATHS = ${TARGET_BUILD_DIR} "$(SRCROOT)/../../../"/**
 
+//  HEADER_SEARCH_PATHS = "\"$(SRCROOT)/../../macSVGPlugin Framework/MacSVGPlugin/**\"";
+
+
 //:configuration = Release
+HEADER_SEARCH_PATHS = "\"$(SRCROOT)/../../macSVGPlugin Framework/MacSVGPlugin/**\"";
+
 //  HEADER_SEARCH_PATHS = "$(SRCROOT)/../../../"/**  $(inherited) /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include
 
 //  FRAMEWORKS_SEARCH_PATHS = ${TARGET_BUILD_DIR} "$(SRCROOT)/../../../"/**
