--- a/macSVG/en.lproj/macSVG.help/Contents/Info.plist
+++ b/macSVG/en.lproj/macSVG.help/Contents/Info.plist
@@ -27,9 +27,9 @@
 	<key>HPDBookKBProduct</key>
 	<string>macSVG</string>
 	<key>HPDBookKBURL</key>
-	<string>http://macsvg.org/helpbook?s=&apos;query&apos;&amp;amp;l=&apos;lang&apos;&amp;amp;=&apos;product&apos;</string>
+	<string>https://macsvg.org/helpbook?s=&apos;query&apos;&amp;amp;l=&apos;lang&apos;&amp;amp;=&apos;product&apos;</string>
 	<key>HPDBookRemoteURL</key>
-	<string>http://macsvg.org/</string>
+	<string>https://macsvg.org/</string>
 	<key>HPDBookTitle</key>
 	<string>macSVG Help</string>
 	<key>HPDBookType</key>
