--- a/MacSVG Plugin Projects/macSVG Plugins/PathElementShapeAnimationEditor/PathElementShapeAnimationEditor/PathElementShapeAnimationEditor-Info.plist
+++ b/MacSVG Plugin Projects/macSVG Plugins/PathElementShapeAnimationEditor/PathElementShapeAnimationEditor/PathElementShapeAnimationEditor-Info.plist
@@ -25,6 +25,6 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2013 ArkPhone LLC. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
-	<string></string>
+	<string>PathElementShapeAnimationEditor</string>
 </dict>
 </plist>
